[project]
name = "docker-composer"
version = "2.79.7"
description = "Use docker-compose (V2) from within Python"
authors = [{ name = "Micha", email = "schollm-git@gmx.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dependencies = [
    "attrs>=20.3.0",
    "loguru>=0.5.3",
    "ruff>=0.11.10",
]

[project.urls]
Homepage = "https://github.com/schollm/docker-composer"
Repository = "https://github.com/schollm/docker-composer"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=6.0.0,<7",
    "isort>=6.0.1",
    "pytest>=6.1.2",
    "pytest-cov>=6.1.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/docker_composer"]

[tool.hatch.build.targets.wheel]
include = ["src/docker_composer"]

[tool.hatch.build.targets.wheel.sources]
"src/docker_composer" = "docker_composer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = """
  --junit-xml=.out/junit-pytest.xml
  --cov=src/docker_composer
  --cov-report=xml:.out/coverage.xml
  --cov-report=html:.out/coverage-html
  --cov-report term-missing
  --cov-branch
  --doctest-modules
"""

